fix(TournamentsUpcomingMarkets): hide carousel arrows on mobile

--- a/src/pages/Tournaments/TournamentsUpcomingMarkets.module.scss
+++ b/src/pages/Tournaments/TournamentsUpcomingMarkets.module.scss
@@ -14,6 +14,15 @@
           margin: 0 -16px !important;
         }
       }
+
+      .react-horizontal-scrolling-menu--arrow-left,
+      .react-horizontal-scrolling-menu--arrow-right {
+        display: none !important;
+
+        @media (min-width: 768px) {
+          display: flex !important;
+        }
+      }
     }
   }
 
